# for config.h
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/..)

SET(COMPATIBILITY)
IF(NOT HAVE_GETPROGRAME)
  LIST(APPEND COMPATIBILITY getprogname.c)
ENDIF()
IF(NOT HAVE_STRLCPY)
  LIST(APPEND COMPATIBILITY strlcpy.c)
ENDIF()
IF(NOT HAVE_VASPRINTF)
  LIST(APPEND COMPATIBILITY vasprintf.c)
ENDIF()

SET(COMMON_SOURCES
  ${COMPATIBILITY}
)

ADD_LIBRARY(libziptools ${COMMON_SOURCES})
TARGET_LINK_LIBRARIES(libziptools ${ZLIB_LIBRARIES})
SET_PROPERTY(TARGET libziptools PROPERTY C_STANDARD 99)
SET_PROPERTY(TARGET libziptools PROPERTY C_STANDARD_REQUIRED ON)

FOREACH(PROGRAM unzip zip)
  ADD_EXECUTABLE(${PROGRAM} ${PROGRAM}.c)
  TARGET_LINK_LIBRARIES(${PROGRAM} libziptools ${MAIN_LIBS_ABSOLUTE})
  INSTALL(TARGETS ${PROGRAM} RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
  SET_PROPERTY(TARGET ${PROGRAM} PROPERTY C_STANDARD 99)
  SET_PROPERTY(TARGET ${PROGRAM} PROPERTY C_STANDARD_REQUIRED ON)
ENDFOREACH()

FOREACH(PROGRAM unzip zip)
  TARGET_LINK_LIBRARIES(${PROGRAM} ${SUPPORT_LIBS_ABSOLUTE})
ENDFOREACH()
