# for config.h
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/..)

SET(COMPATIBILITY)
IF(NOT HAVE_GETPROGRAME)
  LIST(APPEND COMPATIBILITY getprogname.c)
ENDIF()

SET(COMMON_SOURCES
  bitset.c
  ${COMPATIBILITY}
)

SET(UNZIP_SOURCES
  list.c
  test.c
  unzip.c
)

SET(ZIP_SOURCES
  zip.c
)

ADD_LIBRARY(libziptools ${COMMON_SOURCES})
TARGET_LINK_LIBRARIES(libziptools ${ZLIB_LIBRARIES})
SET_PROPERTY(TARGET libziptools PROPERTY C_STANDARD 99)
SET_PROPERTY(TARGET libziptools PROPERTY C_STANDARD_REQUIRED ON)

ADD_EXECUTABLE(unzip ${UNZIP_SOURCES})
ADD_EXECUTABLE(zip ${ZIP_SOURCES})

FOREACH(PROGRAM unzip zip)
  TARGET_LINK_LIBRARIES(${PROGRAM} libziptools ${MAIN_LIBS_ABSOLUTE})
  INSTALL(TARGETS ${PROGRAM} RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
  SET_PROPERTY(TARGET ${PROGRAM} PROPERTY C_STANDARD 99)
  SET_PROPERTY(TARGET ${PROGRAM} PROPERTY C_STANDARD_REQUIRED ON)
  TARGET_LINK_LIBRARIES(${PROGRAM} ${SUPPORT_LIBS_ABSOLUTE})
ENDFOREACH()
